[gd_scene load_steps=5 format=4 uid="uid://cgl7xfbqx0d2w"]

[ext_resource type="Script" uid="uid://tiep3bs2dur0" path="res://Scripts/BlockManager.gd" id="1_gl6un"]
[ext_resource type="TileSet" uid="uid://6k5fe6xbjv3k" path="res://Textures/tilesets/tileset.tres" id="2_j5yw3"]
[ext_resource type="JSON" path="res://Textures/Pack/pack.json" id="2_kldst"]
[ext_resource type="Script" uid="uid://cuyhldr37yjrt" path="res://Scripts/controller_clicker.gd" id="3_j5yw3"]

[node name="Game" type="Node2D"]
texture_filter = 1

[node name="World" type="Node2D" parent="."]

[node name="Tilemaps" type="Node2D" parent="World" node_paths=PackedStringArray("tilemap_master")]
script = ExtResource("1_gl6un")
resource_json = ExtResource("2_kldst")
tilemap_master = NodePath("MasterTileMapLayer")

[node name="MasterTileMapLayer" type="TileMapLayer" parent="World/Tilemaps"]
z_index = 100
y_sort_enabled = true
tile_set = ExtResource("2_j5yw3")

[node name="UI" type="Control" parent="World/Tilemaps"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -167.0
offset_top = 40.0
offset_right = -103.0
offset_bottom = 104.0

[node name="ColorRect" type="ColorRect" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_left = -4.0
offset_right = 61.0
offset_bottom = 61.0
color = Color(0.31024548, 0.38947448, 0.43563697, 1)

[node name="Label" type="Label" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_top = 24.0
offset_right = 517.0
offset_bottom = 91.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 48
text = "Cursor position  :  (0,0)"

[node name="Label2" type="Label" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_top = 33.0
offset_right = 545.0
offset_bottom = 100.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 48
text = "Looking position  :  (0,0)"

[node name="Label3" type="Label" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_top = 51.0
offset_right = 360.0
offset_bottom = 118.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 48
text = "Rotation  :  (0,0)"

[node name="Label4" type="Label" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_top = 42.0
offset_right = 360.0
offset_bottom = 109.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 48
text = "Side  :  (0,0)"

[node name="Title" type="Label" parent="World/Tilemaps/UI"]
layout_mode = 0
offset_left = 0.99999976
offset_top = 6.000002
offset_right = 555.0
offset_bottom = 138.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 96
text = "Voxel Demo"

[node name="UI2" type="Control" parent="World/Tilemaps"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 111.0
offset_top = 40.0
offset_right = 175.0
offset_bottom = 104.0

[node name="ColorRect" type="ColorRect" parent="World/Tilemaps/UI2"]
layout_mode = 0
offset_left = -12.0
offset_top = 23.0
offset_right = 61.0
offset_bottom = 61.0
color = Color(0.31024548, 0.38947448, 0.43563697, 1)

[node name="Label" type="Label" parent="World/Tilemaps/UI2"]
layout_mode = 0
offset_left = -6.9999995
offset_top = 37.0
offset_right = 633.0
offset_bottom = 244.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 48
text = "Add block : Click
Remove : Left Click
Rotate : Left & Right Arrows"

[node name="Title" type="Label" parent="World/Tilemaps/UI2"]
layout_mode = 0
offset_left = -7.9999995
offset_top = 24.0
offset_right = 546.0
offset_bottom = 156.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.60784316, 0.6784314, 0.7176471, 1)
theme_override_font_sizes/font_size = 96
text = "Controls"

[node name="Controller" type="Node2D" parent="." node_paths=PackedStringArray("tilemap_script")]
script = ExtResource("3_j5yw3")
tilemap_script = NodePath("../World/Tilemaps")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(10, 10)

[node name="Floor" type="TileMapLayer" parent="."]
z_index = -1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAEAAwAAAAAAAAD//wAAAwAAAAAAAAD+////AwAAAAAAAAABAAAAAwAAAAAAAAACAP//AwAAAAAAAAACAAEAAwAAAAAAAAABAAIAAwAAAAAAAAD//wIAAwAAAAAAAAD+/wEAAwAAAAAAAAD9/wAAAwAAAAAAAAD///7/AwAAAAAAAAABAP7/AwAAAAAAAAADAP7/AwAAAAAAAAACAP3/AwAAAAAAAAAAAP3/AwAAAAAAAAD9//7/AwAAAAAAAAD+//3/AwAAAAAAAAADAAAAAwAAAAAAAAAEAAEAAwAAAAAAAAADAAIAAwAAAAAAAAACAAMAAwAAAAAAAAABAAQAAwAAAAAAAAAAAAMAAwAAAAAAAAD//wQAAwAAAAAAAAD+/wMAAwAAAAAAAAD9/wIAAwAAAAAAAAD8/wEAAwAAAAAAAAD7/wAAAwAAAAAAAAD8////AwAAAAAAAAD+/wUAAwAAAAAAAAD9/wQAAwAAAAAAAAD8/wMAAwAAAAAAAAD7/wIAAwAAAAAAAAD6/wEAAwAAAAAAAAD5/wIAAwAAAAAAAAD9/wYAAwAAAAAAAAD8/wUAAwAAAAAAAAD7/wQAAwAAAAAAAAD6/wMAAwAAAAAAAAD7/wUAAwABAAAAAAADAP3/AwABAAAAAAACAP7/AwABAAAAAAABAP//AwABAAAAAAD//wEAAwABAAAAAAD+/wIAAwABAAAAAAD9/wMAAwABAAAAAAD8/wQAAwABAAAAAAD8/wYAAwABAAAAAAD9/wUAAwABAAAAAAD+/wQAAwABAAAAAAD//wMAAwABAAAAAAAAAAIAAwABAAAAAAABAAEAAwABAAAAAAACAAAAAwABAAAAAAADAP//AwABAAAAAAAEAP7/AwABAAAAAAACAPz/AwABAAAAAAABAP3/AwABAAAAAAAAAP7/AwABAAAAAAD/////AwABAAAAAAD+/wAAAwABAAAAAAD9/wEAAwABAAAAAAD8/wIAAwABAAAAAAD7/wMAAwABAAAAAAD6/wQAAwABAAAAAAD5/wMAAwABAAAAAAD6/wIAAwABAAAAAAD7/wEAAwABAAAAAAD8/wAAAwABAAAAAAD9////AwABAAAAAAD+//7/AwABAAAAAAD///3/AwABAAAAAAAAAPz/AwABAAAAAAABAPv/AwABAAAAAAAFAP3/AwABAAAAAAAGAPz/AwABAAAAAAAHAPv/AwABAAAAAAAIAPr/AwABAAAAAAAHAPn/AwABAAAAAAAGAPj/AwABAAAAAAAFAPj/AwAAAAAAAAAFAPf/AwABAAAAAAAEAPj/AwABAAAAAAADAPn/AwABAAAAAAACAPr/AwABAAAAAAAEAPn/AwAAAAAAAAADAPr/AwAAAAAAAAACAPv/AwAAAAAAAAABAPz/AwAAAAAAAAAGAPf/AwAAAAAAAAAHAPj/AwAAAAAAAAAIAPn/AwAAAAAAAAAGAPn/AwAAAAAAAAAFAPr/AwAAAAAAAAAEAPv/AwAAAAAAAAADAPz/AwAAAAAAAAAHAPr/AwAAAAAAAAAGAPv/AwAAAAAAAAAFAPz/AwAAAAAAAAAEAP3/AwAAAAAAAAAGAPr/AwABAAAAAAAFAPv/AwABAAAAAAAEAPz/AwABAAAAAAAFAPn/AwABAAAAAAAEAPr/AwABAAAAAAADAPv/AwABAAAAAAD7/wcAAwABAAAAAAD8/wgAAwABAAAAAAD9/wkAAwABAAAAAAD+/woAAwABAAAAAAD//wsAAwABAAAAAAAAAAoAAwABAAAAAAABAAkAAwABAAAAAAACAAgAAwABAAAAAAADAAcAAwABAAAAAAAEAAYAAwABAAAAAAAFAAUAAwABAAAAAAAGAAQAAwABAAAAAAAHAAMAAwABAAAAAAAIAAIAAwABAAAAAAAJAAEAAwABAAAAAAAKAAAAAwABAAAAAAALAP//AwABAAAAAAAMAP7/AwABAAAAAAALAP3/AwABAAAAAAAKAP7/AwABAAAAAAAJAP//AwABAAAAAAAIAAAAAwABAAAAAAAHAAEAAwABAAAAAAAGAAIAAwABAAAAAAAFAAMAAwABAAAAAAAEAAQAAwABAAAAAAADAAUAAwABAAAAAAACAAYAAwABAAAAAAABAAcAAwABAAAAAAAAAAgAAwABAAAAAAD//wkAAwABAAAAAAD+/wgAAwABAAAAAAD//wcAAwABAAAAAAAAAAYAAwABAAAAAAABAAUAAwABAAAAAAACAAQAAwABAAAAAAADAAMAAwABAAAAAAAEAAIAAwABAAAAAAAFAAEAAwABAAAAAAAGAAAAAwABAAAAAAAHAP//AwABAAAAAAAIAP7/AwABAAAAAAAJAP3/AwABAAAAAAAKAPz/AwABAAAAAAAJAPv/AwABAAAAAAAIAPz/AwABAAAAAAAHAP3/AwABAAAAAAAGAP7/AwABAAAAAAAFAP//AwABAAAAAAAEAAAAAwABAAAAAAADAAEAAwABAAAAAAACAAIAAwABAAAAAAABAAMAAwABAAAAAAAAAAQAAwABAAAAAAD//wUAAwABAAAAAAD+/wYAAwABAAAAAAD9/wcAAwABAAAAAAD6/wYAAwABAAAAAAD5/wUAAwABAAAAAAD4/wQAAwABAAAAAAD3/wMAAwABAAAAAAD4/wIAAwABAAAAAAD5/wEAAwABAAAAAAD6/wAAAwABAAAAAAD7////AwABAAAAAAD8//7/AwABAAAAAAD9//3/AwABAAAAAAD+//z/AwABAAAAAAD///v/AwABAAAAAAAAAPr/AwABAAAAAAABAPn/AwABAAAAAAACAPj/AwABAAAAAAADAPf/AwABAAAAAAAEAPb/AwABAAAAAAADAPX/AwABAAAAAAACAPb/AwABAAAAAAABAPf/AwABAAAAAAAAAPj/AwABAAAAAAD///n/AwABAAAAAAD+//r/AwABAAAAAAD9//v/AwABAAAAAAD8//z/AwABAAAAAAD7//3/AwABAAAAAAD6//7/AwABAAAAAAD5////AwABAAAAAAD4/wAAAwABAAAAAAD3/wEAAwABAAAAAAD2/wIAAwABAAAAAAD1/wEAAwABAAAAAAD2/wAAAwABAAAAAAD3////AwABAAAAAAD4//7/AwABAAAAAAD5//3/AwABAAAAAAD6//z/AwABAAAAAAD7//v/AwABAAAAAAD8//r/AwABAAAAAAD9//n/AwABAAAAAAD+//j/AwABAAAAAAD///f/AwABAAAAAAAAAPb/AwABAAAAAAABAPX/AwABAAAAAAACAPT/AwABAAAAAAABAPP/AwABAAAAAAAAAPT/AwABAAAAAAD///X/AwABAAAAAAD+//b/AwABAAAAAAD9//f/AwABAAAAAAD8//j/AwABAAAAAAD7//n/AwABAAAAAAD6//r/AwABAAAAAAD5//v/AwABAAAAAAD4//z/AwABAAAAAAD3//3/AwABAAAAAAD2//7/AwABAAAAAAD1////AwABAAAAAAD0/wAAAwABAAAAAAADAPb/AwAAAAAAAAACAPf/AwAAAAAAAAABAPj/AwAAAAAAAAAAAPn/AwAAAAAAAAD///r/AwAAAAAAAAD+//v/AwAAAAAAAAD9//z/AwAAAAAAAAD8//3/AwAAAAAAAAD7//7/AwAAAAAAAAD6////AwAAAAAAAAD5/wAAAwAAAAAAAAD4/wEAAwAAAAAAAAD3/wIAAwAAAAAAAAD2/wMAAwAAAAAAAAD4/wMAAwAAAAAAAAD3/wQAAwAAAAAAAAD5/wQAAwAAAAAAAAD4/wUAAwAAAAAAAAD6/wUAAwAAAAAAAAD5/wYAAwAAAAAAAAD7/wYAAwAAAAAAAAD6/wcAAwAAAAAAAAD8/wcAAwAAAAAAAAD7/wgAAwAAAAAAAAAJAPr/AwAAAAAAAAAIAPv/AwAAAAAAAAAHAPz/AwAAAAAAAAAGAP3/AwAAAAAAAAAFAP7/AwAAAAAAAAAEAP//AwAAAAAAAAAKAPv/AwAAAAAAAAAJAPz/AwAAAAAAAAAIAP3/AwAAAAAAAAAHAP7/AwAAAAAAAAAGAP//AwAAAAAAAAAFAAAAAwAAAAAAAAAAAAUAAwAAAAAAAAD//wYAAwAAAAAAAAD+/wcAAwAAAAAAAAD9/wgAAwAAAAAAAAD8/wkAAwAAAAAAAAD9/woAAwAAAAAAAAD+/wkAAwAAAAAAAAD//wgAAwAAAAAAAAAAAAcAAwAAAAAAAAABAAYAAwAAAAAAAAACAAUAAwAAAAAAAAADAAQAAwAAAAAAAAAEAAMAAwAAAAAAAAAFAAIAAwAAAAAAAAAGAAEAAwAAAAAAAAAHAAAAAwAAAAAAAAAIAP//AwAAAAAAAAAJAP7/AwAAAAAAAAAKAP3/AwAAAAAAAAALAPz/AwAAAAAAAAAMAP3/AwAAAAAAAAALAP7/AwAAAAAAAAAKAP//AwAAAAAAAAAJAAAAAwAAAAAAAAAIAAEAAwAAAAAAAAAHAAIAAwAAAAAAAAAGAAMAAwAAAAAAAAAFAAQAAwAAAAAAAAAEAAUAAwAAAAAAAAADAAYAAwAAAAAAAAACAAcAAwAAAAAAAAABAAgAAwAAAAAAAAAAAAkAAwAAAAAAAAD//woAAwAAAAAAAAD+/wsAAwAAAAAAAAAFAPb/AwAAAAAAAAAEAPf/AwAAAAAAAAADAPj/AwAAAAAAAAACAPn/AwAAAAAAAAABAPr/AwAAAAAAAAAAAPv/AwAAAAAAAAD///z/AwAAAAAAAAAEAPX/AwAAAAAAAAADAPT/AwAAAAAAAAACAPP/AwAAAAAAAAABAPT/AwAAAAAAAAAAAPX/AwAAAAAAAAD///b/AwAAAAAAAAD+//f/AwAAAAAAAAD9//j/AwAAAAAAAAD8//n/AwAAAAAAAAD7//r/AwAAAAAAAAD6//v/AwAAAAAAAAD5//z/AwAAAAAAAAD4//3/AwAAAAAAAAD3//7/AwAAAAAAAAD2////AwAAAAAAAAD1/wAAAwAAAAAAAAD0/wEAAwAAAAAAAAD1/wIAAwAAAAAAAAD2/wEAAwAAAAAAAAD3/wAAAwAAAAAAAAD4////AwAAAAAAAAD5//7/AwAAAAAAAAD6//3/AwAAAAAAAAD7//z/AwAAAAAAAAD8//v/AwAAAAAAAAD9//r/AwAAAAAAAAD+//n/AwAAAAAAAAD///j/AwAAAAAAAAAAAPf/AwAAAAAAAAABAPb/AwAAAAAAAAACAPX/AwAAAAAAAAAAAP//AwAAAAAAAAANAP7/AwAAAAAAAAD//wwAAwAAAAAAAAAAAAsAAwAAAAAAAAABAAoAAwAAAAAAAAACAAkAAwAAAAAAAAADAAgAAwAAAAAAAAAEAAcAAwAAAAAAAAAFAAYAAwAAAAAAAAAGAAUAAwAAAAAAAAAHAAQAAwAAAAAAAAAIAAMAAwAAAAAAAAAJAAIAAwAAAAAAAAAKAAEAAwAAAAAAAAALAAAAAwAAAAAAAAAMAP//AwAAAAAAAAABAPL/AwAAAAAAAAAAAPP/AwAAAAAAAAD///T/AwAAAAAAAAD+//X/AwAAAAAAAAD9//b/AwAAAAAAAAD8//f/AwAAAAAAAAD7//j/AwAAAAAAAAD6//n/AwAAAAAAAAD5//r/AwAAAAAAAAD4//v/AwAAAAAAAAD3//z/AwAAAAAAAAD2//3/AwAAAAAAAAD1//7/AwAAAAAAAAD0////AwAAAAAAAADz/wAAAwAAAAAAAAA=")
tile_set = ExtResource("2_j5yw3")
